syntax = "proto3";

option csharp_namespace = "LEX_LegalSettings";

service GrpcLegalSetting {
    rpc GetAllRequestType (GetAllRequest) returns (RequestTypeResponse);
}


message GetAllRequest {}

message GrpcRequestTypeModel{
    int32 requesttypeId = 1;
    string name = 2;
}

message RequestTypeResponse {
    repeated GrpcRequestTypeModel requesttype = 1;
}